# R4C-Robots-for-Consumers

./: README.md  pyproject.toml  robot_report.xlsx
R4C/: settings.py  urls.py
customers/: models.py
orders/: forms.py  urls.py  views.py
orders/templates/: base.html  order.html  success.html
robots/: models.py  urls.py  views.py
robots/migrations/: 0002_auto_20231004_0821.py
robots/utils/: exel_report.py  validators.py
