[tool.poetry]
name = "r4c-robots-for-consumers"
version = "0.1.0"
description = ""
authors = ["David-Roklem <roklem@mail.ru>"]
readme = "README.md"
packages = [{include = "r4c_robots_for_consumers"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "3.0.9"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
